Remove guava some guava multi and immutable maps.