@@ -21,7 +21,6 @@
 
 package io.crate.expression.operator;
 
-import com.google.common.collect.ImmutableList;
 import io.crate.data.Input;
 import io.crate.expression.symbol.Function;
 import io.crate.expression.symbol.Literal;
@@ -125,7 +124,7 @@ public class AndOperator extends Operator<Boolean> {
         assert second.valueType().equals(DataTypes.BOOLEAN) || second.valueType().equals(DataTypes.UNDEFINED) :
             "second symbol must have BOOLEAN return type to create AND function";
 
-        return new Function(INFO, ImmutableList.of(first, second));
+        return new Function(INFO, List.of(first, second));
     }
 
     public static Symbol join(Iterable<? extends Symbol> symbols) {
